lifeguard-derive/tests/ui/compile_error_relation_invalid_column_ref.stderr
error: expected expression, found `,`
 --> tests/ui/compile_error_relation_invalid_column_ref.rs:8:10
  |
8 | #[derive(DeriveRelation)]
  |          ^^^^^^^^^^^^^^
  |          |
  |          expected expression
  |          while parsing the `match` arm starting here
  |
  = note: this error originates in the derive macro `DeriveRelation` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive produced unparsable tokens
 --> tests/ui/compile_error_relation_invalid_column_ref.rs:8:10
  |
8 | #[derive(DeriveRelation)]
  |          ^^^^^^^^^^^^^^

error: Column reference contains invalid identifier "123invalid" at position 1 in "Column::123invalid". Identifiers must be valid Rust identifiers (e.g., start with a letter or underscore, contain only alphanumeric characters and underscores).
  --> tests/ui/compile_error_relation_invalid_column_ref.rs:14:5
   |
14 |     Invalid,
   |     ^^^^^^^

error[E0433]: failed to resolve: there are too many leading `super` keywords
 --> tests/ui/compile_error_relation_invalid_column_ref.rs:8:10
  |
8 | #[derive(DeriveRelation)]
  |          ^^^^^^^^^^^^^^ there are too many leading `super` keywords
  |
  = note: this error originates in the derive macro `DeriveRelation` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_relation_invalid_column_ref.rs:15:2
   |
15 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_relation_invalid_column_ref.rs`
